--- a/javascript/study/web_site03.html
+++ b/javascript/study/web_site03.html
@@ -171,7 +171,7 @@
                             <div class="sample03_result">
                                 <div class="script">
                                     <div class="t_code">
-<pre><code class="language-html">&ㅣㅅ;body&gt;
+<pre><code class="language-html">&lt;body&gt;
     &lt;section class="container section score"&gt;
         &lt;header class="header_container"&gt;
             &lt;div class="active_container"&gt;
@@ -244,8 +244,7 @@
                 <div id="sample01" class="sample">
                     <h2 class="t_tit2">CSS 코드</h2>
                     <p class="t_desc2_css">
-                        폰트는 'SCoreDream'를 이용하고 .card 클래스를 생성해 카드 유형을 구성하고,<br>
-                        각각 .blind, figcaption, :nth-child()를 통해 완성합니다.
+                        폰트는 'SCoreDream'를 이용하고, 클래스를 중첩시켜 스타일을 적용해 효율적인 코드 작성을 합니다.
                     </p>
                     <div class="result">
                         <!-- 결과보기 -->
