--- a/javascript/study/web_site03.html
+++ b/javascript/study/web_site03.html
@@ -80,79 +80,79 @@
         <main id="main">
             <div class="document">
                 <!-- 01번 메인 샘플 시작 -->
-                <h2 class="t_tit2">Figma</h2>
+                <h2 class="t_tit2">구조와 관련된 요소?</h2>
                 <p class="t_desc2_css">
-                    시멘틱 태그인, header/section/footer/nav/article/aside에 관한 설명입니다.
+                    구조와 관련된 요소로 주로 사용되는 시멘틱 태그인, header/section/footer/nav/article/aside에 관한 설명입니다.
                 </p>
                 <table class="t_table">
                     <thead>
                         <tr>
                             <th>요소 유형</th>
                             <th>태그명</th>
-                            <th>의미와 특징</th>
+                            <th>태그의 의미 및 특징</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td rowspan="12" class="ce"> 블록 레벨 요소</td>
+                            <td rowspan="12" class="ce"> 블록 레벨<br>요소</td>
                             <td rowspan="2" class="ce">
                                 &lt;header&gt; <br>
                                 &lt;/header&gt;
                             </td>
-                            <td>HTML 문서의 헤더 영역을 의미하는 태그로 제목, 내비게이션(메뉴), 검색 등의 내용을 포함할 수 있다.</td>
+                            <td>HTML 문서의 헤더 영역을 의미하는 태그로 제목, 내비게이션(메뉴), 검색 등의 내용을 포함할 수 있습니다.</td>
                         </tr>
                         <tr>
-                            <td>텍스트, 인라인 요소, 블록 레벨 요소를 포함할 수 있지만,<i>&lt;heder&gt;, &lt;footer&gt; 태그는 포함할 수 없다.</i></td>
+                            <td>텍스트, 인라인 요소, 블록 레벨 요소를 포함 가능하며 &lt;heder&gt;, &lt;footer&gt; 태그는 포함할 수 없습니다.</td>
                         </tr>
                         <tr>
                             <td rowspan="2" class="ce">
                                 &lt;section&gt; <br>
                                 &lt;/section&gt;
                             </td>
-                            <td>HTML 문서에서 맥락이 <i>같은 요소들을 주제별로 그룹화</i>해주는 태그이며, 섹션 주세에 대한 제목 요소 &lt;h2&gt; ~ &lt;h6&gt; 를 포함하는 게 좋다.</td>
+                            <td>HTML 문서에서 맥락이 같은 요소들을 주제별로 그룹화해주는 태그이며, 섹션 주세에 대한 제목 요소 (&lt;h2&gt; ~ &lt;h6&gt;) 를 포함하는것이 좋습니다.</td>
                         </tr>
                         <tr>
-                            <td>텍스트, 인라인 요소, 블록레벨 요소를 포함할 수 있다.</td>
+                            <td>텍스트, 인라인 요소, 블록레벨 요소를 포함할 수 있습니다.</td>
                         </tr>
                         <tr>
                             <td rowspan="2" class="ce">
                                 &lt;footer&gt; <br>
                                 &lt;/footer&gt;
                             </td>
-                            <td>HTML 문서의 가장 하단 부분(푸터)을 의미하는 태그로 <i>섹션 작성자, 저작권에 대한 정보, 관련된 문서의 링크를 포함</i>할 수 있다.</td>
+                            <td>HTML 문서의 가장 하단 부분(푸터)을 의미하는 태그로 섹션 작성자, 저작권에 대한 정보, 관련된 문서의 링크를 포함할 수 있습니다.</td>
                         </tr>
                         <tr>
-                            <td>&lt;header&gt;와 같이 텍스트, 인라인 요소, 블록 레벨 요소는 포함할 수 있지만, &lt;header&gt;, &lt;footer&gt; 태그는 포함할 수 없다.</td>
+                            <td>&lt;header&gt;와 같이 텍스트, 인라인 요소, 블록 레벨 요소는 포함할 수 있지만, &lt;header&gt;, &lt;footer&gt; 태그는 포함할 수 없습니다.</td>
                         </tr>
                         <tr>
                             <td rowspan="2" class="ce">
                                 &lt;nav&gt; <br>
                                 &lt;/nav&gt;
                             </td>
-                            <td>메인 메뉴 혹은 목차 등을 정의해 주는 태그 (내비게이션)</td>
+                            <td>HTML 문서의 메인 메뉴나 목차 등을 정의해 주는 태그입니다.</td>
                         </tr>
                         <tr>
-                            <td>텍스트, 인라인 요소, 블록레벨 요소를 포함할 수 있다.</td>
+                            <td>텍스트, 인라인 요소, 블록레벨 요소를 포함할 수 있습니다.</td>
                         </tr>
                         <tr>
                             <td rowspan="2" class="ce">
                                 &lt;article&gt; <br>
                                 &lt;/article&gt;
                             </td>
-                            <td>독립적으로 배포 또는 재사용일 가능한 게시물, 뉴스 기사, 블로그 포스팅 등을 의미하는 태그이며, 제목 요소 &lt;h2&gt; ~ &lt;h6&gt; 를 포함하는 게 좋다.</td>
+                            <td>독립적으로 배포 또는 재사용일 가능한 게시물, 뉴스 기사, 블로그 포스팅 등을 의미하는 태그이며, 제목 요소 (&lt;h2&gt; ~ &lt;h6&gt;) 를 포함하는 게 좋다.</td>
                         </tr>
                         <tr>
-                            <td>텍스트, 인라인 요소, 블록레벨 요소를 포함할 수 있다.</td>
+                            <td>텍스트, 인라인 요소, 블록레벨 요소를 포함할 수 있습니다.</td>
                         </tr>
                         <tr>
                             <td rowspan="2" class="ce">
                                 &lt;aside&gt; <br>
                                 &lt;/aside&gt;
                             </td>
-                            <td><i>메인 콘텐츠와 직접적으로 관련이 없는 영역을 의미</i>하는 태그이며, HTML 문서의 오른쪽이나 왼쪽의 사이드 메뉴 혹은 광고 등의 영역으로 사용이 가능하다.</td>
+                            <td>메인 콘텐츠와 직접적으로 관련이 없는 영역을 의미하는 태그이며, HTML 문서의 오른쪽이나 왼쪽의 사이드 메뉴 혹은 광고 등의 영역으로 사용이 가능합니다.</td>
                         </tr>
                         <tr>
-                            <td>텍스트, 인라인 요소, 블록레벨 요소를 포함할 수 있다.</td>
+                            <td>텍스트, 인라인 요소, 블록레벨 요소를 포함할 수 있습니다.</td>
                         </tr>
                     </tbody>
                 </table>
@@ -525,15 +525,15 @@
 
                 <h2 class="t_tit2">결과</h2>
                 <div class="t_iframe" style="min-height : 1000px; padding-top:0;">
-                    <iframe src="https://kimsangjunv1.github.io/coding/site/cardType/cardType03.html" frameborder="0"></iframe>
+                    <iframe src="https://kimsangjunv1.github.io/coding/javascript/study/web_homework.html" frameborder="0"></iframe>
                 </div>
                 <hr>
                 <div style="display:flex; justify-content:space-between; margin-left:20%; margin-right:20%;">
                     <div class="t_link">
-                        <a href="https://github.com/kimsangjunv1/coding/blob/main/site/cardType/cardType03.html" target="blank">원본 소스 보기</a>
+                        <a href="https://github.com/kimsangjunv1/coding/blob/main/javascript/study/web_homework.html" target="blank">원본 소스 보기</a>
                     </div>
                     <div class="t_link">
-                        <a href="https://kimsangjunv1.github.io/coding/site/cardType/cardType03.html" target="blank">원본 페이지 보기</a>
+                        <a href="https://kimsangjunv1.github.io/coding/javascript/study/web_homework.html" target="blank">원본 페이지 보기</a>
                     </div>
                 </div>
             </div>
