--- a/javascript/study/1.OnlyCopyJava.html
+++ b/javascript/study/1.OnlyCopyJava.html
@@ -26,27 +26,27 @@
                 <li><a href="../javascript07.html">수학 객체</a></li>
                 <li><a href="../javascript08.html">숫자 객체</a></li>
                 <li><a href="../javascript09.html">브라우저 객체</a></li>
-                <li class="active"><a href="../javascript10.html">요소 객체</a></li>
-                <li><a href="j../avascript11.html">이벤트 객체</a></li>
+                <li><a href="../javascript10.html">요소 객체</a></li>
+                <li><a href="../javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="effect">
-                <li><a href="effect/searchEffect01.html">검색 효과</a></li>
-                <li><a href="effect/quizEffect01.html">퀴즈 효과</a></li>
-                <li><a href="effect/textEffect01.html">텍스트 효과</a></li>
-                <li><a href="effect/mouseEffect01.html">마우스 효과</a></li>
-                <li><a href="effect/sliderEffect01.html">슬라이드 효과</a></li>
-                <li><a href="effect/parallaxEffect01.html">패럴랙스 효과</a></li>
-                <li><a href="effect/gameEffect01.html">게임 효과</a></li>
+                <li><a href="../effect/searchEffect01.html">검색 효과</a></li>
+                <li><a href="../effect/quizEffect01.html">퀴즈 효과</a></li>
+                <li><a href="../effect/textEffect01.html">텍스트 효과</a></li>
+                <li><a href="../effect/mouseEffect01.html">마우스 효과</a></li>
+                <li><a href="../effect/sliderEffect01.html">슬라이드 효과</a></li>
+                <li><a href="../effect/parallaxEffect01.html">패럴랙스 효과</a></li>
+                <li><a href="../effect/gameEffect01.html">게임 효과</a></li>
             </ul>
             <ul class="study">
-                <li><a href="study/basic.html">기본 규칙</a></li>
-                <li><a href="study/operator.html">연산자</a></li>
-                <li><a href="study/for.html">반복문</a></li>
-                <li><a href="study/if.html">조건문</a></li>
-                <li><a href="study/type.html">데이터 타입</a></li>
-                <li><a href="study/function.html">함수</a></li>
-                <li><a href="study/var.html">지역변수/전역변수</a></li>
-                <li><a href="study/element.html">요소 선택</a></li>
+                <li><a href="basic.html">기본 규칙</a></li>
+                <li><a href="operator.html">연산자</a></li>
+                <li><a href="for.html">반복문</a></li>
+                <li class="active"><a href="if.html">조건문</a></li>
+                <li><a href="type.html">데이터 타입</a></li>
+                <li><a href="function.html">함수</a></li>
+                <li><a href="var.html">지역변수/전역변수</a></li>
+                <li><a href="element.html">요소 선택</a></li>
             </ul>
         </nav>
     </header>
@@ -91,7 +91,7 @@
 
                     <hr>
 
-                    <h3 class="t_tit2">객체 플래그</h3>
+                    <h3 class="t_tit2">정규표현식 객체 플래그</h3>
                     <table class="t_table">
                         <thead>
                             <tr>
@@ -113,39 +113,13 @@
                                     console.log(reg2.test(str)); //true
                                 </td>
                             </tr>
-                            <tr>
-                                <td class="ce" rowspan="2">g</td>
-                                <td>문자열 전체를 정규표현식과 비교합니다.</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    var reg1 = /a/;<br>
-                                    var reg2= /a/g;<br>
-                                    var str = javascript<br>
-                                    console.log(str.match(reg1)); //['a']<br>
-                                    console.log(str.match(reg2)); //['a', 'a']
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="ce" rowspan="2">m</td>
-                                <td>여러 행의 문자열을 정규표현식과 비교합니다.</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    var reg1 = /^s/;<br>
-                                    var reg2= /^s/m;<br>
-                                    var str = javascript\nscript<br>
-                                    console.log(str.match(reg1)); //null<br>
-                                    console.log(str.match(reg2)); //['s'] <br>
-                                    '^s'는 행의 첫번째 문자가 s로 시작하는 것을 의미하고 '\n'은 행바꿈을 의미합니다.
-                                </td>
-                            </tr>
                         </tbody>
                     </table>
 
                     <hr>
-
-                    <h3 class="t_tit2">객체 주요 패턴</h3>
+                    <h3 class="t_tit2">정규표현식 객체 주요 패턴</h3>
+                    <p class="t_desc">
+                    </p>
                     <table class="t_table">
                         <thead>
                             <tr>
@@ -290,6 +264,7 @@
                             </tr>
                         </tbody>
                     </table>
+
                 </div>
                 <!-- 1번 끝 -->
                 <hr>
