--- a/javascript/effect/searchEffect01.html
+++ b/javascript/effect/searchEffect01.html
@@ -9,20 +9,14 @@
     <link rel="stylesheet" href="../assets/css/search.css">
 
     <link href="https://webfontworld.github.io/tmon/Tmon.css" rel="stylesheet">
-<link href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css" rel="stylesheet">
+    <link href="https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css" rel="stylesheet">
 </head>
 <body>
     <header id="header">
         <h1>Search</h1>
         <nav>
             <ul>
-                <li class="active"><a href="searchEffect01.html">1</a>
-                    <ul class="sub">
-                        <li class="active"><a href="searchEffect01.html">HTML</a></li>
-                        <li><a href="searchEffect01_css.html">CSS</a></li>
-                        <li><a href="searchEffect01_javascript.html">JAVASCRIPT</a></li>
-                    </ul>
-                </li>
+                <li class="active"><a href="searchEffect01.html">1</a></li>
                 <li><a href="searchEffect02.html">2</a></li>
                 <li><a href="searchEffect03.html">3</a></li>
                 <li><a href="searchEffect04.html">4</a></li>
@@ -36,34 +30,60 @@
     <main id="main">
         <div class="search__wrap">
             <span>indexOf()를 이용하여 CSS 속성 검색하기</span>
-            <h1>HTML 태그 검색하기</h1>
+            <h1>CSS 속성 검색하기</h1>
             <div class="search__box">
                 <label for="search">검색하기</label>
-                <input type="text" id="search" placeholder="HTML 태그를 입력해주세요.">
+                <input type="text" id="search" placeholder="CSS 속성을 입력해주세요.">
+            </div>
+            <div class="search__info">
+                CSS 속성 갯수 : <span class="num">0</span>
             </div>
             <div class="search__list">
                 <div class="html">
                     <ul>
-                        <li data-name="a"><strong>a</strong> : a 태그는 다른 페이지 이동을 설정합니다.</li>
-                        <li data-name="abbr"><strong>abbr</strong> : abbr 태그는 줄임말이나 머리글자를 표현하는데 사용합니다.</li>
-                        <li data-name="article"><strong>article</strong> : 문서, 페이지, 애플리케이션, 또는 사이트 안에서 독립적으로 구분해 배포하거나 재사용할 수 있는 구획을 나타냅니다. 사용 예제로 게시판과 블로그 글, 매거진이나 뉴스 기사 등이 있습니다.</li>
-                        <li data-name="aside"><strong>aside</strong> : 문서의 주요 내용과 간접적으로만 연관된 부분을 나타냅니다. 주로 사이드바 혹은 콜아웃 박스로 표현합니다.</li>
-                        <li data-name="body"><strong>body</strong> : HTML 문서의 내용을 나타냅니다. 한 문서에 하나의 요소만 존재할 수 있습니다.</li>
-                        <li data-name="br"><strong>br</strong> : 텍스트 안에 줄바꿈(캐리지 리턴)을 생성합니다. 주소나 시조 등 줄의 구분이 중요한 내용을 작성할 때 유용합니다.</li>
-                        <li data-name="button"><strong>button</strong> : 클릭 가능한 버튼을 나타냅니다. 버튼은 양식 내부는 물론 간단한 표준 버튼 기능이 필요한 곳이라면 문서 어디에나 배치할 수 있습니다. 기본값의 HTML 버튼은 사용자 에이전트의 호스트 플랫폼과 비슷한 디자인을 따라가지만, 외형은 CSS로 변경할 수 있습니다.</li>
-                        <li data-name="code"><strong>code</strong> : 짧은 코드 조각을 나타내는 스타일을 사용해 자신의 콘텐츠를 표시합니다. 기본 스타일은 사용자 에이전트의 고정폭 글씨체입니다.</li>
-                        <li data-name="col"><strong>col</strong> : 표의 열을 나타내며, 열에 속하는 칸에 공통된 의미를 부여할 때 사용합니다. &lt;colgroup&gt; 안에서 찾을 수 있습니다.</li>
-                        <li data-name="colgroup"><strong>colgroup</strong> : 표의 열을 묶는 그룹을 정의합니다.</li>
-                        <li data-name="details"><strong>details</strong> : "열림" 상태일 때만 내부 정보를 보여주는 정보 공개 위젯을 생성합니다. 요약이나 레이블은 <summary> 요소를 통해 제공할 수 있습니다. 정보 공개 위젯은 보통 레이블 옆의 작은 삼각형이 돌아가면서 열림/닫힘 상태를 나타냅니다. &lt;details&gt; 요소의 첫 번째 자식이 &lt;summary&gt; 요소라면, &lt;summary&gt;의 콘텐츠를 위젯의 레이블로 사용합니다.</li>
-                        <li data-name="div"><strong>div</strong> : 플로우 콘텐츠를 위한 통용 컨테이너입니다. CSS로 꾸미기 전에는 콘텐츠나 레이아웃에 어떤 영향도 주지 않습니다.</li>
-                        <li data-name="em"><strong>em</strong> : 텍스트의 강세를 나타냅니다. 요소를 중첩하면 더 큰 강세를 뜻하게 됩니다.</li>
-                        <li data-name="figure"><strong>figure</strong> : 독립적인 콘텐츠를 표현하며 요소를 사용해 설명을 붙일 수 있습니다. 피규어, 설명, 콘텐츠는 하나의 단위로 참조됩니다.</li>
-                        <li data-name="footer"><strong>footer</strong> : 가장 가까운 구획 콘텐츠나 구획 루트의 푸터를 나타냅니다. 푸터는 일반적으로 구획의 작성자, 저작권 정보, 관련 문서 등의 내용을 담습니다.</li>
-                        <li data-name="head"><strong>head</strong> : 기계가 식별할 수 있는 문서 정보(메타데이터)를 담습니다. 정보로는 문서가 사용할 제목, 스크립트, 스타일 시트 등이 있습니다.</li>
-                        <li data-name="header"><strong>header</strong> : 소개 및 탐색에 도움을 주는 콘텐츠를 나타냅니다. 제목, 로고, 검색 폼, 작성자 이름 등의 요소도 포함할 수 있습니다.</li>
-                        <li data-name="h1"><strong>h1</strong> : 6단계의 구획 제목을 나타냅니다. 구획 단계는 []이 가장 높고 []은 가장 낮습니다.</li>
-                        <li data-name="hr"><strong>hr</strong> : 이야기 장면 전환, 구획 내 주제 변경 등, 문단 레벨 요소에서 주제의 분리를 나타냅니다.</li>
-                        <li data-name="html"><strong>html</strong> : HTML 문서의 루트(최상단 요소)를 나타내며, "루트 요소"라고도 부릅니다. 모든 다른 요소는 요소의 후손이어야 합니다.</li>
+                        <li data-name="accent-color"><strong>accent-color</strong> : 다른 페이지 이동을 설정합니다.</li>
+                        <li data-name="align-content"><strong>align-content</strong> : 콘텐츠 아이템의 상하관계 정렬 상태를 설정합니다.</li>
+                        <li data-name="animation"><strong>animation</strong> : 애니메이션과 관련된 속성을 일괄적으로 설정합니다.</li>
+                        <li data-name="animation-delay"><strong>animation-delay</strong> : 애니메이션 지연 시간을 설정합니다.</li>
+                        <li data-name="animation-duration"><strong>animation-duration</strong> : 애니메이션 움직임을 설정합니다.</li>
+                        <li data-name="animation-fill-mode"><strong>animation-fill-mode</strong> : 애니메이션이 끝난 후의 상태를 설정합니다.</li>
+                        <li data-name="animation-iteration-count"><strong>animation-iteration-count</strong> : 애니메이션의 반복 횟수를 설정합니다</li>
+                        <li data-name="animation-name"><strong>animation-name</strong> : 애니메이션 keyframe 이동을 설정합니다.</li>
+                        <li data-name="animation-play-state"><strong>animation-name</strong> : 애니메이션 keyframe 이동을 설정합니다.</li>
+                        <li data-name="animation-timing-function"><strong>animation-timing-function</strong> : 애니메이션 움직임의 속도를 설정합니다.</li>
+
+                        <li data-name="backdrop-filter"><strong>backdrop-filter</strong> : 배경에 다양한 효과를 줍니다.</li>
+                        <li data-name="background"><strong>background</strong> : 백그라운드 속성을 일괄적으로 설정합니다</li>
+                        <li data-name="background-attachment"><strong>background-attachment</strong> : 배경 이미지의 고정 여부를 설정합니다</li>
+                        <li data-name="background-blend-mode"><strong>background-blend-mode</strong> : 배경을 혼합했을 때 그래픽 효과를 설정합니다.</li>
+                        <li data-name="background-clip"><strong>background-clip</strong> : 백그라운드 이미지의 위치 기준점을 설정합니다.</li>
+                        <li data-name="background-color"><strong>background-color</strong> : 백그라운드 색을 설정합니다.</li>
+                        <li data-name="background-image"><strong>background-image</strong> : 백그라운드 이미지 속성을 설정합니다.</li>
+                        <li data-name="background-origin"><strong>background-origin</strong> : 백그라운드 이미지의 위치 기준점을 설정하기 위한 속성입니다.</li>
+                        <li data-name="background-position"><strong>background-position</strong> : 백그라운드 이미지의 위치 영역을 설정합니다.</li>
+                        <li data-name="background-position-x"><strong>background-position-x</strong> : 백그라운드 이미지의 x축 위치 영역을 설정합니다.</li>
+
+                        <li data-name="background-position-y"><strong>background-position-y</strong> : 백그라운드 이미지의 x축 위치 영역을 설정합니다.</li>
+                        <li data-name="background-repeat"><strong>background-repeat</strong> : 백그라운드 이미지 반복 여부를 설정합니다.</li>
+                        <li data-name="background-size"><strong>background-size</strong> : 백그라운드 이미지 사이즈를 설정합니다.</li>
+                        <li data-name="border"><strong>border</strong> : 테두리 속성을 일괄적으로 설정합니다.</li>
+                        <li data-name="border-bottom"><strong>border-bottom</strong> : 아래쪽 속성을 일괄적으로 설정합니다.</li>
+                        <li data-name="border-bottom-color"><strong>border-bottom-color</strong> : 테두리 아래쪽 색 속성을 설정합니다.</li>
+                        <li data-name="border-bottom-left-radius"><strong>border-left-radius</strong> : 아래 왼쪽 모서리 굴곡을 설정합니다.</li>
+                        <li data-name="border-bottom-right-radius"><strong>border-right-radius</strong> : 아래 오른쪽 모서리 굴곡을 설정합니다.</li>
+                        <li data-name="border-bottom-style"><strong>border-bottom-style</strong> : border-bottom-style은 아래쪽 테두리의 스타일 속성을 설정합니다.</li>
+                        <li data-name="border-bottom-width"><strong>border-bottom-width</strong> : border-bottom-width은 아래쪽 테두리의 두께 속성을 설정합니다.</li>
+                        
+                        <li data-name="border-collapse"><strong>border-collapse</strong> : border-collapse는 테이블의 테두리를 겹칠지, 떨어트릴지를 설정합니다</li>
+                        <li data-name="border-left"><strong>border-left</strong> : border-left는 요소의 왼쪽 테두리의 속성을 일괄적으로 설정합니다.</li>
+                        <li data-name="border-left-color"><strong>border-left-color</strong> : border-left-color는 요소의 왼쪽 테두리의 색상을 설정합니다.</li>
+                        <li data-name="border-left-style"><strong>border-left-style</strong> : border-left-style은 요소의 왼쪽 테두리의 스타일 속성을 설정합니다.</li>
+                        <li data-name="border-left-width"><strong>border-left-width</strong> : border-left-width는 요소의 왼쪽 테두리의 두께를 설정합니다.</li>
+                        <li data-name="border-radius"><strong>border-radius</strong> : border-radius는 요소의 테두리 굴곡을 설정합니다.</li>
+                        <li data-name="border-right"><strong>border-right</strong> :border-right은 요소의 오른쪽 테두리 속성을 일괄적으로 설정합니다.</li>
+                        <li data-name="border-right-color"><strong>border-right-color</strong> : border-right-color는 요소의 오른쪽 테두리의 색상을 설정합니다.</li>
+                        <li data-name="border-right-style"><strong><border-right-styl></border-right-styl>e</strong> : border-right-style은 요소의 오른쪽 테두리의 스타일 속성을 설정합니다.</li>
+                        <li data-name="border-right-width"><strong>border-right-width</strong> : border-right-width는 요소의 오른쪽 테두리의 두께를 설정합니다.</li>
                     </ul>
                 </div>
             </div>
@@ -81,7 +101,13 @@
         //선택자
         const searchBox = document.querySelector(".search__box input");               //검색 영역
         const searchList = document.querySelectorAll(".search__list ul li");    //목록 리스트
+        const searchInfo = document.querySelectorAll(".search__info .num");    //전체 갯수
 
+        // 전체 갯수 구하기
+        document.querySelector(".num").innerHTML=searchList.length
+        // searchInfo.textContent = searchList.length;
+
+        //검색 영역
         searchBox.addEventListener("keyup", ()=>{ //keyup이라 설정했기 때문에 한글자만 써도 실행이 됨
             const searchWord = searchBox.value; //사용자가 입력한 키워드
             
