--- a/site/ImageType/imageType01.html
+++ b/site/ImageType/imageType01.html
@@ -86,10 +86,10 @@
         }
 
         .card:nth-child(1){
-            background-image: url(img/Rectangle\ 25.jpg);
+            background-image: url(img/bg01_01.jpg);
         }
         .card:nth-child(2){
-            background-image: url(img/Rectangle\ 26.jpg);
+            background-image: url(img/bg01_02.jpg);
         }
         
         .card_container{
@@ -108,6 +108,7 @@
             margin-top: 10px;
             line-height: 1.5;
             font-size: 16px;
+            font-weight: 300;
         }
 
         .text_cont .more{
@@ -123,7 +124,7 @@
     </style>
 </head>
 
-<body>
+<body class="nexon">
     <div class="container section">
         <h2>강아지의 모든 모습!</h2>
         <p>세상에서 가장 귀여운 강아지의 모든 모습을 상상하고 세세하게 지켜만 보세요!!</p>
