--- a/site/ImageType/imageType01_TC.html
+++ b/site/ImageType/imageType01_TC.html
@@ -78,10 +78,10 @@
             padding: 200px 30px 30px 30px;
             box-sizing: border-box; /*dlrjf Tjdi dkssjacla */
         }
-        .image .img1 {
-            background: url(img/Rectangle\ 25.jpg) no-repeat center;
+        .image.img1 {
+            background: url(img/bg01_01.jpg) no-repeat center;
         }
-        .image .img2 {
+        .image.img2 {
             background: url(img/Rectangle\ 25.jpg) no-repeat center;
         }
         .image_title {
