--- a/javascript/study/web_replace_replaceAll.html
+++ b/javascript/study/web_replace_replaceAll.html
@@ -96,17 +96,17 @@
                     <h2 class="t_tit2">replace()/replaceAll()</h2>
                     <p class="t_desc2_css">replace() 메서드는 문자열을 부분 문자로 구분하고 배열로 반환합니다.</p>
                     <p class="t_box">
-                        // mdn의 설명을 넣고 풀네임 string.prototype.replace와<br>
-                        / 정규식 표현은 / / 이렇게 사용 <br><br>
-
+                        ::예시<br><br>
+                        
                         "문자열".replace("찾을 문자열", "변경할 문자열")<br>
                         "문자열".replace(정규식)<br>
-                        "문자열".replace(정규식, 변경할 문자열)
+                        "문자열".replace(정규식, 변경할 문자열)<br>
+                        / 정규식 표현은 / / 이렇게 사용
                     </p>
 
                     <hr>
                     
-                    <h3 class="t_tit2">replace()_예시 01</h3>
+                    <h3 class="t_tit2">replace() 예시 01</h3>
                     <div class="script">
                         <div class="t_code">
                         <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
@@ -125,7 +125,7 @@ const currentStr6 = str1.replace(/e/i, "E");                  //javascript rEfer
                         <div class="t_box">자바스크립트 reference<br>Javascript reference<br>javascript rEference<br>/avascript rEfErEncE<br>javascript rEfErEncE<br>javascript rEference</div>
                     </details>
 
-                    <h3 class="t_tit2">replace()_예시 02</h3>
+                    <h3 class="t_tit2">replace() 예시 02</h3>
                     <div class="script">
                         <div class="t_code">
                         <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
@@ -139,7 +139,8 @@ const currentStr7 = str2.replace("1", "2");                   //1을 2로 바꿈
                         <div class="t_box">https://www.naver.com/img0<i>1</i>.jpg</div>
                     </details>
 
-                    <h3 class="t_tit2">replace()_예시 03</h3>
+                    <h3 class="t_tit2">replaceAll() 예시</h3>
+                    <p class="t_box">기존 replace는 한가지만 변경이 가능했지만 replaceAll같은경우 다중으로 변경이 가능합니다.</p>
                     <div class="script">
                         <div class="t_code">
                         <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
