--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -403,6 +403,7 @@ const currentStr34 = str1.substr(-3, 3);  // nce
                 </div>
                 
                 <div class="script">
+                    <div class="t_code">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
 <pre><code class="language-js">// "문자열".split(구분자(separator));
     // "문자열".split(정규식 표현);
@@ -433,6 +434,7 @@ const currentStr34 = str1.substr(-3, 3);  // nce
     const currentStr16 = str4.split('').reverse().join();       // 반대로 출력 e,c,n,e,!,r,e,f,e,r,&,t,p,i,r,c,s,&,a,v,a,j
     const currentStr17 = str4.split('').reverse().join('/');    // 반대로 출력하면서 / 추가e/c/n/e/!/r/e/f/e/r/&/t/p/i/r/c/s/&/a/v/a/j
 </code></pre>
+                    </div>
                 </div>
             </div>
             <!-- 5번 끝 -->
@@ -644,6 +646,7 @@ const currentStr34 = str1.substr(-3, 3);  // nce
                 </div>
                 
                 <div class="script">
+                    <div class="t_code">
             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
 <pre><code class="language-js"> // "문자열".indexOf(검색값)
     // "문자열".indexOf(검색값, 위치값)
@@ -680,6 +683,7 @@ const currentStr34 = str1.substr(-3, 3);  // nce
     const currentStr25 = str1.lastIndexOf("reference", 11);             // 11
     const currentStr26 = str1.lastIndexOf("reference", 12);             // 11
 </code></pre>
+                    </div>
                 </div>
             </div>
             <!-- 11번 끝 -->
