--- a/javascript/study/web_gyeolhap.html
+++ b/javascript/study/web_gyeolhap.html
@@ -26,17 +26,17 @@
                 <li><a href="../javascript07.html">수학 객체</a></li>
                 <li><a href="../javascript08.html">숫자 객체</a></li>
                 <li><a href="../javascript09.html">브라우저 객체</a></li>
-                <li class="active"><a href="../javascript10.html">요소 객체</a></li>
-                <li><a href="j../avascript11.html">이벤트 객체</a></li>
+                <li><a href="../javascript10.html">요소 객체</a></li>
+                <li><a href="../javascript11.html">이벤트 객체</a></li>
             </ul>
             <ul class="effect">
-                <li><a href="effect/searchEffect01.html">검색 효과</a></li>
-                <li><a href="effect/quizEffect01.html">퀴즈 효과</a></li>
-                <li><a href="effect/textEffect01.html">텍스트 효과</a></li>
-                <li><a href="effect/mouseEffect01.html">마우스 효과</a></li>
-                <li><a href="effect/sliderEffect01.html">슬라이드 효과</a></li>
-                <li><a href="effect/parallaxEffect01.html">패럴랙스 효과</a></li>
-                <li><a href="effect/gameEffect01.html">게임 효과</a></li>
+                <li><a href="../effect/searchEffect01.html">검색 효과</a></li>
+                <li><a href="../effect/quizEffect01.html">퀴즈 효과</a></li>
+                <li><a href="../effect/textEffect01.html">텍스트 효과</a></li>
+                <li><a href="../effect/mouseEffect01.html">마우스 효과</a></li>
+                <li><a href="../effect/sliderEffect01.html">슬라이드 효과</a></li>
+                <li><a href="../effect/parallaxEffect01.html">패럴랙스 효과</a></li>
+                <li><a href="../effect/gameEffect01.html">게임 효과</a></li>
             </ul>
             <ul class="study">
                 <li><a href="basic.html">기본 규칙</a></li>
@@ -57,6 +57,8 @@
                 <li><a href="web_jeongyu.html">정규 표현식</a></li>
                 <li><a href="web_indexOf.html">indexOf()</a></li>
                 <li><a href="web_homework.html">사이트 예제 만들기</a></li>
+                <li><a href="web_replace_replaceAll.html">replace/replaceAll</a></li>
+                <li><a href="concat">concat</a></li>
             </ul>
         </nav>
     </header>
@@ -91,84 +93,99 @@
             <div class="document">
                 <!-- 1번 -->
                 <div id="sample01" class="sample">
-                    <h2 class="t_tit2">indexOf</h2>
-                    <p class="t_desc2_css">문자열에서 특정 문자의 위치를 찾고 그 값이 일치했을때 숫자를 반환하며 일치하는 값이 없을때는 -1을 반홥합니다.</p>
-                    <div class="t_box">
-                        ::예시<br><br>
-                        "문자열".indexOf(검색값)<br>
-                        "문자열".indexOf(검색값, 위치값)
-                    </div>
-                    <div class="script">
-                        <div class="t_code">
-                            <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
-<pre><code class="language-js">const str1 = "javascript reference";
-const currentStr1 = str1.indexOf("javascript"); //indexOf는 찾는값의 첫번째 자리 시작값 0 : 답 0
-const currentStr2 = str1.indexOf("reference"); // 답 11
-const currentStr3 = str1.indexOf("j"); // 답 0
-const currentStr4 = str1.indexOf("a"); // 답 1
-const currentStr5 = str1.indexOf("v"); // 답 2
-
-const currentStr6 = str1.indexOf("jquery"); //indexOf는 데이터가 없을때 : 답 -1
-const currentStr7 = str1.indexOf("b"); //indexOf는 데이터가 없을때 : 답 -1
-const currentStr8 = str1.indexOf("javascript, 0"); // 0번째 자리에 있는지 : 답 0
-const currentStr9 = str1.indexOf("javascript, 1"); // 1번째 자리에 있는지 : 답 -1
-const currentStr10 = str1.indexOf("reference, 0"); // 0번째 자리에 있는지 : 답 11
-const currentStr11 = str1.indexOf("reference, 1"); // 1번째 자리에 있는지 : 답 11
-const currentStr12 = str1.indexOf("reference, 11"); // 11번째 자리에 있는지 : 답 11
-const currentStr13 = str1.indexOf("reference, 12"); // 12번째 자리에 있는지 : 답 -1
-</code></pre>
-                        </div>
-                    </div>
-                    <details>
-                        <summary class="t_box">결과 보기</summary>
-                        <div class="t_box">0<br>11<br>0<br>1<br>2<br>-1<br>-1<br>0<br>-1<br>11<br>11<br>11<br>-1</div>
-                    </details>
+                <h3 class="t_tit2">01. 문자열 : 문자열 결합 / 템플릿 문자열</h3>
+                <p class="t_desc2">템플릿 문자열은 내장된 표현식을 허용하는 문자열 리터럴이다.</p>
+                <div class="table">
+                    <table>
+                        <colgroup>
+                            <col style="width: 5%">
+                            <col style="width: 32%">
+                            <col style="width: 22%">
+                            <col style="width: 42%">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th>번호</th>
+                                <th>기본값</th>
+                                <th>메서드</th>
+                                <th>리턴값</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="sample01_N1">1</td>
+                                <td class="sample01_Q1">자바스크립트, 제이쿼리</td>
+                                <td class="sample01_M1">문자열(string) 결합</td>
+                                <td class="sample01_P1">자바스크립트제이쿼리</td>
+                            </tr>
+                            <tr>
+                                <td class="sample01_N2">2</td>
+                                <td class="sample01_Q2">100, 200</td>
+                                <td class="sample01_M2">숫자(number) 결합</td>
+                                <td class="sample01_P2">300</td>
+                            </tr>
+                            <tr>
+                                <td class="sample01_N3">3</td>
+                                <td class="sample01_Q3">모던, 자바스크립트, 핵심</td>
+                                <td class="sample01_M3">문자열(string) 결합</td>
+                                <td class="sample01_P3">나는 모던(modern) 자바스크립트(javascript) 핵심을 배우고 싶다.</td>
+                            </tr>
+                            <tr>
+                                <td class="sample01_N4">4</td>
+                                <td class="sample01_Q4">모던, 자바스크립트, 핵심</td>
+                                <td class="sample01_M4">템플릿 문자열</td>
+                                <td class="sample01_P4">나는 모던(modern) 자바스크립트(javascipt) 핵심을 배우고 싶다.</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <!-- 1번 끝 -->
-                <hr>
-                <!-- 1번 -->
-                <div id="sample01" class="sample">
-                    <h2 class="t_tit2">lastIndexOf</h2>
-                    <p class="t_desc2_css">lastIndexOf()는 indexOf()와 달리 뒤에서 부터 특정 문자를 찾습니다.</p>
-                    <div class="t_box">
-                        ::예시<br><br>
-                        "문자열".lastIndexOf(검색값)<br>
-                        "문자열".lastIndexOf(검색값, 위치값)
-                    </div>
-                    <div class="script">
-                        <div class="t_code">
-                            <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
-<pre><code class="language-js">const str1 = "javascript reference";
-    
-const currentStr14 = str1.lastIndexOf("javascript");                // 0번째부터 값이 있고 있으니까 맨앞의 0이 나옵니다.
-const currentStr15 = str1.lastIndexOf("reference");                 // 11이 나옵니다
-const currentStr16 = str1.lastIndexOf("j");                         // 맨 앞에 j가 있으니 0이 나옵니다.
-const currentStr17 = str1.lastIndexOf("a");                         // 맨 앞에 a가 있으니 j(1), a(중복), v(2), a(3) 그래서 3이 나옵니다.
-const currentStr18 = str1.lastIndexOf("v");                         // 맨 앞에 v가 있으니 2이 나옵니다.
-const currentStr19 = str1.lastIndexOf("jquery");                    // 맨 앞에 v가 있으니 -1이 나옵니다.
-const currentStr20 = str1.lastIndexOf("b");                         // 맨 앞에 b가 있으니 -1이 나옵니다.
-const currentStr21 = str1.lastIndexOf("javascript", 0);             // 0
-const currentStr22 = str1.lastIndexOf("javascript", 1);             // 0
-const currentStr23 = str1.lastIndexOf("reference", 0);              // -1
-const currentStr24 = str1.lastIndexOf("reference", 1);              // -1
-const currentStr25 = str1.lastIndexOf("reference", 11);             // 11
-const currentStr26 = str1.lastIndexOf("reference", 12);             // 11
+                <div class="script">
+                    <div class="t_code">
+            <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
+<pre><code class="language-js">// 01번
+const str1 = "자바스크립트";
+const str2 = "제이쿼리";
+
+document.querySelector(".sample01_N1").innerHTML="1";
+document.querySelector(".sample01_Q1").innerHTML="자바스크립트, 제이쿼리";
+document.querySelector(".sample01_M1").innerHTML="문자열(string) 결합";
+document.querySelector(".sample01_P1").innerHTML=str1 +" "+str2;
+
+// 02번
+const num1 = 100;
+const num2 = 200;
+
+document.querySelector(".sample01_N2").innerHTML="2";
+document.querySelector(".sample01_Q2").innerHTML="100, 200";
+document.querySelector(".sample01_M2").innerHTML="숫자(number) 결합";
+document.querySelector(".sample01_P2").innerHTML=num1 +" "+num2;
+
+// 03번
+const text1 = "모던";
+const text2 = "자바스크립트";
+const text3 = "핵심";
+
+document.querySelector(".sample01_N3").innerHTML="3";
+document.querySelector(".sample01_Q3").innerHTML="모던, 자바스크립트, 핵심";
+document.querySelector(".sample01_M3").innerHTML="문자열(string) 결합";
+document.querySelector(".sample01_P3").innerHTML="나는 " + text1 +"(modern) "+ text2 +"(javascript) "+ text3 + "을 배우고 싶다.";
+document.querySelector(".sample01_N4").innerHTML="4";
+document.querySelector(".sample01_Q4").innerHTML="모던, 자바스크립트, 핵심";
+document.querySelector(".sample01_M4").innerHTML="템플릿 문자열";
+document.querySelector(".sample01_P4").innerHTML=`나는 ${text1}(modern) ${text2}(modern) ${text3}(modern)`;
 </code></pre>
-                        </div>
-                    </div>
-                    <details>
-                        <summary class="t_box">결과 보기</summary>
-                        <div class="t_box">0<br>11<br>0<br>3<br>2<br>-1<br>-1<br>0<br>0<br>-1<br>-1<br>11<br>11</div>
-                    </details>
                 </div>
                 <!-- 1번 끝 -->
             </div>
-            
+            </div>
+            </div>
+
         </main>
         <!-- //main -->
 
         <footer id="footer">
             <a href="mailto:webstoryboy@naver.com">webstoryboy@naver.com</a>
+        </footer>
         </footer>
         <!-- //footer -->
         <script src="../assets/js/highlight.min.js"></script>
