--- a/javascript/study/web_sprite(yejae).html
+++ b/javascript/study/web_sprite(yejae).html
@@ -26,7 +26,7 @@
             height: 100px;
             background: #fff;
             border: 1px solid #ededed;
-            border-radius: 50%;
+            border-radius: 15px;
             display: block;
 
             margin-top: 20px;
@@ -43,14 +43,14 @@
             height: 100px;
             background: #fff;
             border: 1px solid #ededed;
-            border-radius: 50px;
+            border-radius: 15px;
             /* display: block; */
 
             margin-top: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin-left: 20px;
+            margin-left: 10px;
         }
 
         .image__sns:hover em{
@@ -58,6 +58,9 @@
         }
 
         /* a에 마우스를 올려두었을떄 */
+        .image__sns:hover a{
+            background-color: #fff !important;
+        }
         .image__sns:hover a,
         .image__sns:hover p {
             background-position: -164px;
