--- a/javascript/study/web_sprite.html
+++ b/javascript/study/web_sprite.html
@@ -178,8 +178,8 @@
                         </div>
                     </div>
                     <hr>
-                    <h2 class="t_tit2">CSS 코드</h2>
-                    <p class="t_box">버튼의 글자는 가리고 이미지만 보여주기 위해 ir효과를 주어 글자는 숨기고 그림만 띄우게 css를 작성하겠습니다.<br>또한 간단한 hover효과를 주어 눈으로 좀 더 확인이 편하게 해보겠습니다.</p>
+                    <h2 class="t_tit2">HTML 코드</h2>
+                    <p class="t_box">간단한 예제 구현을 위한 구조를 구성해보겠습니다.</p>
                     <div class="script">
                         <div class="t_code">
                             <!-- 3. 하단의 클래스를 통해 스크립트(js) 적용 -->
@@ -192,8 +192,8 @@
                     </div>
                     <hr>
                     <h2 class="t_tit2">예제 완성</h2>
-                    <p>마우스를 버튼에 올리면 한장의 스프라이트안에 저장되어있는 다른 아이콘으로 이동합니다.</p>
-                    <div class="t_iframe" style="min-height : 1000px; padding-top:0;">
+                    <p class="t_box">마우스를 버튼에 올리면 한장의 스프라이트안에 저장되어있는 다른 아이콘으로 이동합니다.</p>
+                    <div class="t_iframe" style="min-height : 165px; padding-top:0;">
                         <iframe src="https://kimsangjunv1.github.io/coding/javascript/study/web_sprite(yejae).html" frameborder="0"></iframe>
                     </div>
                 </div>
